--- a/admin/check-answers/index.html
+++ b/admin/check-answers/index.html
@@ -23,190 +23,104 @@
     </div> -->
 
     <div class="container">
-        <div class="tabs">
-            <div class="tab">
-                <input type="checkbox" id="chck1">
-                <label class="tab-label" for="chck1">Question 1</label>
-                <div class="row tab-content">
-                    <div class="col-10">
-                        <h6>Users Answer:</h6>
-                        <div id="a1" class="usersAnswer">
-                            Babu
-                        </div>
-                        <h6>Correct Answer:</h6>
-                        <div id="c1" class="correctAnswer">
-                            Pranshu
-                        </div>
-                        <h6>Total Marks:</h6>
-                        <div id="m1" class="points">
-                            0
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <form class="form">
-                            <div class="">
-                                <input style="width:100%" type="text" id="points" class="pointsInput">
-                                <input type="submit" class="btn-primary pointsInput" style="margin-top: 2px;">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="tab">
-                <input type="checkbox" id="chck2">
-                <label class="tab-label" for="chck2">Question 2</label>
-                <div class="row tab-content">
-                    <div class="col-10">
-                        <h6>Users Answer:</h6>
-                        <div id="a2" class="usersAnswer">
-                            Babu
-                        </div>
-                        <h6>Correct Answer:</h6>
-                        <div id="c2" class="correctAnswer">
-                            Pranshu
-                        </div>
-                        <h6>Total Marks:</h6>
-                        <div id="m2" class="points">
-                            0
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <form class="form">
-                            <div class="">
-                                <input style="width:100%" type="text" id="points" class="pointsInput">
-                                <input type="submit" class="btn-primary pointsInput" style="margin-top: 2px;">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="tab">
-                <input type="checkbox" id="chck3">
-                <label class="tab-label" for="chck3">Question 3</label>
-                <div class="row tab-content">
-                    <div class="col-10">
-                        <h6>Users Answer:</h6>
-                        <div id="a3" class="usersAnswer">
-                            Babu
-                        </div>
-                        <h6>Correct Answer:</h6>
-                        <div id="c3" class="correctAnswer">
-                            Pranshu
-                        </div>
-                        <h6>Total Marks:</h6>
-                        <div id="m3" class="points">
-                            0
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <form class="form">
-                            <div class="">
-                                <input style="width:100%" type="text" id="points" class="pointsInput">
-                                <input type="submit" class="btn-primary pointsInput" style="margin-top: 2px;">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div id="checkingTeam"></div>
-                <button id="checkedTeamsBtn" type="button" style="margin: 10px auto" class="btn btn-primary">Answers
-                    Checked!</button>
-                <script>
-                    document.getElementById("checkedTeamsBtn").onclick = function () {
-                        document.getElementsByClassName("teamTabs")[window.currentTeam - 1].classList.remove("btn-warning")
-                        document.getElementsByClassName("teamTabs")[window.currentTeam - 1].classList.add("btn-success")
-                        console.log("all answers checked!")
-                    }
-                </script>
-            </div>
-
-            <div id="teamSelection" class="row">
-            </div>
+        <div class="tabs" id="tabs">
         </div>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-firestore.js"></script>
+        <div>
+            <div id="checkingTeam"></div>
+            <button id="checkedTeamsBtn" type="button" style="margin: 10px auto" class="btn btn-primary">Answers
+                Checked!</button>
+            <script>
+                document.getElementById("checkedTeamsBtn").onclick = function () {
+                    document.getElementsByClassName("teamTabs")[window.currentTeam - 1].classList.remove("btn-warning")
+                    document.getElementsByClassName("teamTabs")[window.currentTeam - 1].classList.add("btn-success")
+                    console.log("all answers checked!")
+                }
+            </script>
+        </div>
 
-        <!-- TODO: Add SDKs for Firebase products that you want to use
+        <div id="teamSelection" class="row">
+        </div>
+    </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-firestore.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-analytics.js"></script>
 
-        <script>
-            // Your web app's Firebase configuration
-            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-            var firebaseConfig = {
-                apiKey: "AIzaSyB1mz728tc9dqKGLUiPOAwxBxg20Gx4mSE",
-                authDomain: "quizpriyam.firebaseapp.com",
-                databaseURL: "https://quizpriyam.firebaseio.com",
-                projectId: "quizpriyam",
-                storageBucket: "quizpriyam.appspot.com",
-                messagingSenderId: "968131692426",
-                appId: "1:968131692426:web:467ddbadc7ef1ac1d4ea73",
-                measurementId: "G-WQTBNGZXQS"
-            };
-            // Initialize Firebase
-            firebase.initializeApp(firebaseConfig);
-            firebase.analytics();
-        </script>
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyB1mz728tc9dqKGLUiPOAwxBxg20Gx4mSE",
+            authDomain: "quizpriyam.firebaseapp.com",
+            databaseURL: "https://quizpriyam.firebaseio.com",
+            projectId: "quizpriyam",
+            storageBucket: "quizpriyam.appspot.com",
+            messagingSenderId: "968131692426",
+            appId: "1:968131692426:web:467ddbadc7ef1ac1d4ea73",
+            measurementId: "G-WQTBNGZXQS"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
 
-        <script>
-            window.currentTeam = 0;
-            console.log("in")
-            document.addEventListener('DOMContentLoaded', function () {
-                const db = firebase.firestore();
-                window.teamCodes = {};
-                var teamCodesDoc = db.collection("teamCode").doc('codes');
-                teamCodesDoc.get().then(function (doc) {
-                    window.teamCodes = doc.data();
-                    console.log(window.teamCodes)
-                })
+    <script>
+        window.currentTeam = 0;
+        console.log("in")
+        document.addEventListener('DOMContentLoaded', function () {
+            const db = firebase.firestore();
+            window.teamCodes = {};
+            var teamCodesDoc = db.collection("teamCode").doc('codes');
+            teamCodesDoc.get().then(function (doc) {
+                window.teamCodes = doc.data();
+                console.log(window.teamCodes)
+            })
 
-                db.collection('scorecard').get().then(snap => {
-                    var size = snap.size // will return the collection size
-                    showTeams(size);
-                    console.log("size: ", size)
-                });
+            db.collection('scorecard').get().then(snap => {
+                var size = snap.size // will return the collection size
+                showTeams(size);
+                console.log("size: ", size)
+            });
+            db.collection('answers').doc("correctAnswers").get().then((doc) => {
+                var correct = doc.data()
+                var num_of_ques = 1
+                for (let key in correct) {
+                    num_of_ques += 1
+                }
+                console.log("number of questions : ", num_of_ques - 1)
 
-                function showTeams(n) {
-                    var div = document.getElementById('teamSelection');
-                    for (let i = 0; i < n; i++) {
-                        var teamElement = document.createElement('div');
-                        teamElement.className = "btn btn-primary teamTabs";
-                        teamElement.innerHTML = i + 1;
-                        teamElement.addEventListener("click", function () { fetchData(i + 1); });
-                        div.appendChild(teamElement);
-                    }
+
+                for (let i = 1; i < num_of_ques; i++) {
+                    document.getElementById("tabs").innerHTML += `           <div class="tab">
+                <label class="tab-label" for="chck`+ i + `">Question ` + i + `</label>
+                <div class="row tab-content">
+                    <div class="col-10">
+                        <h6>Users Answer:</h6>
+                        <div id="a`+ i + `" class="usersAnswer">
+                            Babu
+                        </div>
+                        <h6>Correct Answer:</h6>
+                        <div id="c`+ i + `" class="correctAnswer">
+                            Pranshu
+                        </div>
+                        <h6>Total Marks:</h6>
+                        <div id="m`+ i + `" class="points">
+                            0
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <form class="form">
+                            <div class="">
+                                <input style="width:100%" type="text" id="points" class="pointsInput">
+                                <input type="submit" class="btn-primary pointsInput" style="margin-top: 2px;">
+                            </div>
+                        </form>
+                    </div>`
                 }
 
-                var forms = document.getElementsByTagName('form');
-                for (let i = 1; i <= 3; i++) {
-                    var form = forms[i - 1];
-                    form.addEventListener('submit', function (e) {
-                        e.preventDefault();
-                        addPoints(i)
-                    })
-                }
-
-                function addPoints(qNo) {
-                    var empty = {};
-                    var points = document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[0].value
-                    empty[qNo] = parseInt(points);
-                    console.log("Empty : ", empty)
-                    db.collection("scorecard").doc(window.teamCodes[window.currentTeam - 1]).set(empty, { merge: true })
-                        .then(function () {
-
-                            console.log("Answer checked for Question", qNo, "with point", points);
-
-                            document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[1].classList.add('btn-success');
-
-                            setTimeout(function () {
-                                document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[1].classList.remove('btn-success');
-
-                            }, 3000);
-                        });
-
-                }
 
 
                 fetchData = (teamNo) => {
@@ -240,7 +154,7 @@
 
 
                     function addAnswers(answers) {
-                        for (var i = 1; i <= 3; i++) {
+                        for (var i = 1; i <= num_of_ques; i++) {
                             var id = 'a' + i.toString();
                             var answerDiv = document.getElementById(id);
                             if (!answers[i]) answers[i] = "Not answered";
@@ -249,7 +163,7 @@
                     }
 
                     function addCorrectAnswers(correctAnswers) {
-                        for (var i = 1; i <= 3; i++) {
+                        for (var i = 1; i <= num_of_ques; i++) {
                             var id = 'c' + i.toString();
                             var correctAnswerDiv = document.getElementById(id);
                             correctAnswerDiv.innerHTML = correctAnswers[i];
@@ -257,18 +171,61 @@
                     }
 
                     function addTotalPoints(points) {
-                        for (var i = 1; i <= 3; i++) {
+                        for (var i = 1; i <= num_of_ques; i++) {
                             var id = 'm' + i.toString();
                             var pointsDiv = document.getElementById(id);
                             pointsDiv.innerHTML = points[i];
                         }
                     }
 
+                    var forms = document.getElementsByTagName('form');
+                    for (let i = 1; i <= num_of_ques; i++) {
+                        var form = forms[i - 1];
+                        form.addEventListener('submit', function (e) {
+                            e.preventDefault();
+                            addPoints(i)
+                        })
+                    }
 
                 };
             });
 
-        </script>
+            function showTeams(n) {
+                var div = document.getElementById('teamSelection');
+                for (let i = 0; i < n; i++) {
+                    var teamElement = document.createElement('div');
+                    teamElement.className = "btn btn-primary teamTabs";
+                    teamElement.innerHTML = i + 1;
+                    teamElement.addEventListener("click", function () { fetchData(i + 1); });
+                    div.appendChild(teamElement);
+                }
+            }
+
+
+            function addPoints(qNo) {
+                var empty = {};
+                var points = document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[0].value
+                empty[qNo] = parseInt(points);
+                console.log("Empty : ", empty)
+                db.collection("scorecard").doc(window.teamCodes[window.currentTeam - 1]).set(empty, { merge: true })
+                    .then(function () {
+
+                        console.log("Answer checked for Question", qNo, "with point", points);
+
+                        document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[1].classList.add('btn-success');
+
+                        setTimeout(function () {
+                            document.getElementsByTagName('form')[qNo - 1].getElementsByTagName('input')[1].classList.remove('btn-success');
+
+                        }, 3000);
+                    });
+
+            }
+
+
+        });
+
+    </script>
 </body>
 
 
