--- a/admin/index.html
+++ b/admin/index.html
@@ -11,17 +11,32 @@
 </head>
 
 <body>
-  <div id="change-status-div" style="margin-top:10px" class="col">
-    <h3>Change Round</h3>
-    <label for="questionNo">Enter Question No:</label><br>
-    <input type="number" id="questionNo" name="questionNo"><br>
-    <button type="button" id="round-submit" class="btn btn-info btn-sm" onclick="changeValue()"
-      style="margin-top:10px">Change Round</button>
-  </div>
-  <div id="current-round" style="padding:20px">
+  <div class="row" style="height:30vh">
+    <div id="change-round-main" style="border:outset; border-radius:10px" class="col-4">
+      <div id="change-status-div" style="margin-top:10px" class="col">
+        <h3>Change Round</h3>
+        <label for="questionNo">Enter Question No:</label><br>
+        <input type="number" id="questionNo" name="questionNo"><br>
+        <button type="button" id="round-submit" class="btn btn-info btn-sm" onclick="changeValue()"
+          style="margin-top:10px">Change Round</button>
+      </div>
+      <div id="current-round" style="padding:20px">
+      </div>
+    </div>
+
+    <div id="backup" class="col-3" style="padding:40px; border:outset; border-radius:10px">
+      <h4 style="padding:auto">Backup Page</h4>
+      <a style="padding:auto" href="/backup" class="btn btn-primary btn-sm">Backup Button</a>
+    </div>
 
   </div>
+  <!--end of row-->
 
+  <div class="row">
+    <div id="registration" class="col-12">
+
+    </div>
+  </div>
 
   <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-firestore.js"></script>
