Add backup page, registration page and scorecard page

--- a/admin/check-answers/index.html
+++ b/admin/check-answers/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <a style="padding:20px; margin:20px" href="/" class="btn btn-primary btn-sm">Home</a>
+    <a style="padding:20px; margin:20px" href="/backup" class="btn btn-primary btn-sm">Backup Page</a>
+    <a style="padding:20px; margin:20px" href="/register" class="btn btn-primary btn-sm">Registration Page</a>
+    <a style="padding:20px; margin:20px" href="/check-answers" class="btn btn-primary btn-sm">Check answers</a>
+    <a style="padding:20px; margin:20px" href="/scorecard" class="btn btn-primary btn-sm">Scorecard</a>
+    <br>
     <!-- <div id="navbar" class="container-fluid">
         <div class="row">
             <a href="/" class="col center">Home</a>
