--- a/admin/index.html
+++ b/admin/index.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
+
+  <a style="padding:20px; margin:20px" href="/" class="btn btn-primary btn-sm">Home</a>
+  <a style="padding:20px; margin:20px" href="/backup" class="btn btn-primary btn-sm">Backup Page</a>
+  <a style="padding:20px; margin:20px" href="/register" class="btn btn-primary btn-sm">Registration Page</a>
+  <a style="padding:20px; margin:20px" href="/check-answers" class="btn btn-primary btn-sm">Check answers</a>
+  <a style="padding:20px; margin:20px" href="/scorecard" class="btn btn-primary btn-sm">Scorecard</a>
+  <br>
+
   <div class="row" style="height:30vh">
-    <div id="change-round-main" style="border:outset; border-radius:10px" class="col-4">
+    <div id="change-round-main" style="padding:20px ; margin:20px; border:outset; border-radius:10px" class="col-4">
       <div id="change-status-div" style="margin-top:10px" class="col">
         <h3>Change Round</h3>
         <label for="questionNo">Enter Question No:</label><br>
@@ -22,11 +30,6 @@
       </div>
       <div id="current-round" style="padding:20px">
       </div>
-    </div>
-
-    <div id="backup" class="col-3" style="padding:40px; border:outset; border-radius:10px">
-      <h4 style="padding:auto">Backup Page</h4>
-      <a style="padding:auto" href="/backup" class="btn btn-primary btn-sm">Backup Button</a>
     </div>
 
   </div>
